--- a/src/index.html
+++ b/src/index.html
@@ -2,31 +2,132 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>FlyElephant</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>FlyElephant</title>
 </head>
 
 <body>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding:0" width="100%">
+	<table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding:0;" width="100%">
 		<tbody>
 			<tr>
 				<td>
 					<center style="max-width: 600px; width: 100%;">
 						<!--content-->
 						<!--header-->
-						<table border="1" cellpadding="0" cellspacing="0" style="margin:0; padding:0" width="640px" height="46px" bgcolor=#007da2>
+						<table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding:0;" width="640px" height="46px" bgcolor=#007da2>
 							<tr>
 								<td></td>
-								<td style="padding-left:30px; padding-right:30px">
-									<img src="./gallery/logo.jpg" alt="logo FlyElephant" />
-									<img src="./gallery/photo.jpg" alt="photo FlyElephant" style="float:right"/>
+								<td style="padding-left:30px; padding-right:30px;">
+									<img src="./gallery/logo.jpg" width="131px" height="29px" alt="logo FlyElephant" />
+									<img src="./gallery/photo.jpg" width="33px" height="33px" alt="photo FlyElephant" style="float:right;" />
 								</td>
 								<td></td>
 							</tr>
 						</table>
 						<!--/header-->
-						<!--body-->
-						<!--/body-->
+
+						<!--main section-->
+						<table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding:0;" width="640px" height="100%">
+							<tr>
+								<td></td>
+								<td style="padding-left:30px; padding-right:30px; padding-top:30px;">
+									<div align="center" style="font-family:'Myriad Pro', Arial, sans-serif; font-size:24px; color:#007da2; padding-bottom:40px;">
+										Hi Mark
+									</div>
+									<div align="center" style="font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#3c3c3c; padding-bottom:25px;">
+										You have a new direct message from the FlyElephant team
+										<br> (flyelephant.com).
+									</div>
+									<hr>
+									<div style="padding-top:10px; padding-bottom:10px;">
+										<img src="./gallery/facebook.jpg" width="48px" height="48px" alt="photo Facebook" style="float:left; padding-right:20px;"
+										/>
+										<span style="font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#3d3d3d; line-height:22px; -webkit-text-size-adjust:none;">
+											Maria Maria
+										</span>
+										<span style="font-family:'Myriad Pro', Arial, sans-serif; font-size:12px; color:#a7a7a7; line-height:22px; -webkit-text-size-adjust:none;">
+											7:08 PM, Nov 25th
+										</span>
+										<br>
+										<span style="font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#3d3d3d; line-height:22px; -webkit-text-size-adjust:none;">
+											Бла, Бла, бла Бла, Бла, бла...
+										</span>
+										<br>
+										<a href="https://www.facebook.com/flyelephant.net" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#007da2; line-height:22px; -webkit-text-size-adjust:none;">
+											https://www.facebook.com/flyelephant.net
+										</a>
+									</div>
+									<hr>
+									<div align="center" style="font-family:'Myriad Pro', Arial, sans-serif; font-size:24px; color:#007da2; padding-top:35px; padding-bottom:40px;">
+										Hi Mark
+									</div>
+									<div align="center" style="font-family:'Myriad Pro', Arial, sans-serif; font-size:18px; line-height:24px; -webkit-text-size-adjust:none; color:#3f3f3f; padding-bottom:25px;">
+										Your credits:
+										<br>
+										<b>0 $ & 100 compute hours (ch)</b>
+										<div style="padding-top:28px;">
+											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#007da2; line-height:22px; -webkit-text-size-adjust:none;">
+												<img src="./gallery/btn_add_funds.jpg" width="164px" height="33px" alt="Add funds" />
+											</a>
+										</div>
+									</div>
+									<hr>
+									<div style="padding-top:35px; padding-bottom:35px;">
+										<a href="https://platform.flyelephant.net/adminws/my-projects/joined/37" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#007da2; line-height:22px; -webkit-text-size-adjust:none;">
+											https://platform.flyelephant.net/adminws/my-projects/joined/37
+										</a>
+									</div>
+									<div align="left" style="font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; line-height:24px; -webkit-text-size-adjust:none; color:#3c3c3c; padding-bottom:35px;">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Lorem ipsum dolor sit amet, consectetur
+										adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Lorem
+										ipsum dolor sit amet, consectetur adipiscing elit.
+										<br> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									</div>
+									<div>
+										<div>
+											<img src="./gallery/marker.jpg" width="9px" height="9px" alt="*" style="float:left; padding-top:8px;" />
+											<span style="font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; line-height:24px; -webkit-text-size-adjust:none; color:#3c3c3c; display:block; padding-left:16px; padding-right:55px;">
+												Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+											</span>
+										</div>
+										<div>
+											<img src="./gallery/marker.jpg" width="9px" height="9px" alt="*" style="float:left; padding-top:8px;" />
+											<span style="font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; line-height:24px; -webkit-text-size-adjust:none; color:#3c3c3c; display:block; padding-left:16px; padding-right:55px;">
+												Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+											</span>
+										</div>
+										<div>
+											<img src="./gallery/marker.jpg" width="9px" height="9px" alt="*" style="float:left; padding-top:8px;" />
+											<span style="font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; line-height:24px; -webkit-text-size-adjust:none; color:#3c3c3c; display:block; padding-left:16px; padding-right:55px;">
+												Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+											</span>
+										</div>
+										<div>
+											<img src="./gallery/marker.jpg" width="9px" height="9px" alt="*" style="float:left; padding-top:8px;" />
+											<span style="font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; line-height:24px; -webkit-text-size-adjust:none; color:#3c3c3c; display:block; padding-left:16px; padding-right:55px;">
+												Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+											</span>
+										</div>
+									</div>
+									<div align="center">
+										<div style="padding-top:45px;">
+											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#007da2; line-height:22px; -webkit-text-size-adjust:none;">
+												<img src="./gallery/btn_get_started.jpg" width="164px" height="33px" alt="Get started" />
+											</a>
+										</div>
+										<div style="padding-top:10px;">
+											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#007da2; line-height:22px; -webkit-text-size-adjust:none;">
+												<img src="./gallery/btn_hover.jpg" width="164px" height="33px" alt="Hover" />
+											</a>
+										</div>
+									</div>
+									</div>
+								</td>
+								<td></td>
+							</tr>
+						</table>
+						<!--/main section-->
+
 						<!--footer-->
 						<!--/footer-->
 						<!--/content-->
