--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 						<table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding:0;" width="640px" height="100%">
 							<tr>
 								<td></td>
-								<td style="padding-left:30px; padding-right:30px; padding-top:30px;">
+								<td style="padding-left:30px; padding-right:30px; padding-top:30px; padding-bottom:44px;">
 									<div align="center" style="font-family:'Myriad Pro', Arial, sans-serif; font-size:24px; color:#007da2; padding-bottom:40px;">
 										Hi Mark
 									</div>
@@ -66,7 +66,7 @@
 										<br>
 										<b>0 $ & 100 compute hours (ch)</b>
 										<div style="padding-top:28px;">
-											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#007da2; line-height:22px; -webkit-text-size-adjust:none;">
+											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#3c3c3c; line-height:22px; -webkit-text-size-adjust:none;">
 												<img src="./gallery/btn_add_funds.jpg" width="164px" height="33px" alt="Add funds" />
 											</a>
 										</div>
@@ -111,12 +111,12 @@
 									</div>
 									<div align="center">
 										<div style="padding-top:45px;">
-											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#007da2; line-height:22px; -webkit-text-size-adjust:none;">
+											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#3c3c3c; line-height:22px; -webkit-text-size-adjust:none;">
 												<img src="./gallery/btn_get_started.jpg" width="164px" height="33px" alt="Get started" />
 											</a>
 										</div>
 										<div style="padding-top:10px;">
-											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#007da2; line-height:22px; -webkit-text-size-adjust:none;">
+											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#3c3c3c; line-height:22px; -webkit-text-size-adjust:none;">
 												<img src="./gallery/btn_hover.jpg" width="164px" height="33px" alt="Hover" />
 											</a>
 										</div>
@@ -129,6 +129,67 @@
 						<!--/main section-->
 
 						<!--footer-->
+						<table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding:0;" width="640px" height="52px" bgcolor=#007da2>
+							<tr>
+								<td></td>
+								<td style="padding-left:30px; padding-right:30px;">
+									<div align="center" style="padding-top:10px; padding-bottom:10px;">
+										<div style="display:inline-block; padding-left:8px; padding-right:8px;">
+											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#3c3c3c; line-height:22px; -webkit-text-size-adjust:none;">
+												<img src="" width="30px" height="30px" alt="fb" />
+											</a>
+										</div>
+										<div style="display:inline-block; padding-left:8px; padding-right:8px;">
+											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#3c3c3c; line-height:22px; -webkit-text-size-adjust:none;">
+												<img src="" width="30px" height="30px" alt="in" />
+											</a>
+										</div>
+										<div style="display:inline-block; padding-left:8px; padding-right:8px;">
+											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#3c3c3c; line-height:22px; -webkit-text-size-adjust:none;">
+												<img src="" width="30px" height="30px" alt="tw" />
+											</a>
+										</div>
+										<div style="display:inline-block; padding-left:8px; padding-right:8px;">
+											<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:16px; color:#3c3c3c; line-height:22px; -webkit-text-size-adjust:none;">
+												<img src="" width="30px" height="30px" alt="yt" />
+											</a>
+										</div>
+									</div>
+								</td>
+								<td></td>
+							</tr>
+						</table>
+						<table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding:0;" width="640px" height="28px" bgcolor=#3e4243>
+							<tr>
+								<td></td>
+								<td style="padding-left:30px; padding-right:30px;">
+									<div align="center" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:11px; color:#bcbcbc; line-height:28px; -webkit-text-size-adjust:none;">
+									<span>
+										© 2016 FlyElephant. All rights reserved
+									</span>
+									<span style="padding-left:4px; padding-right:4px;">
+										|
+									</span>
+										<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:11px; color:#bcbcbc; line-height:28px; -webkit-text-size-adjust:none;">
+									  	Support
+										</a>
+									<span style="padding-left:4px; padding-right:4px;">
+										|
+									</span> 
+										<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:11px; color:#bcbcbc; line-height:28px; -webkit-text-size-adjust:none;">
+											Privacy Policy
+										</a>
+									<span style="padding-left:4px; padding-right:4px;">
+										|
+									</span>
+										<a href="#" target="_blank" style="text-decoration:none; font-family:'Myriad Pro', Arial, sans-serif; font-size:11px; color:#bcbcbc; line-height:28px; -webkit-text-size-adjust:none;">
+											Terms & Conditions
+										</a>
+									</div>
+								</td>
+								<td></td>
+							</tr>
+						</table>
 						<!--/footer-->
 						<!--/content-->
 					</center>
